# spotify-stats

./: .dockerignore  .env.template  .firebaserc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  common.py  database.py  docker-compose.yaml  fix_plays.py  function.json  main.py  package-lock.json  requirements.txt  setup.cfg  setup.py  spotifystats.py  start.sh  update.py  util.py
.github/workflows/: linters.yml  package_tests.yml  tests.yml
spotifystats/: database.py  main.py  stats.py  util.py
src/spotify-stats/: common.py  database.py  main.py  stats.py
src/spotifystats/: __init__.py  clear.py  database.py  log.py  setup.py  stats.py  util.py
src/spotifystats/api/: app.py  spotify_api.py
src/spotifystats/cli/: cli.py
src/spotifystats/database/: __init__.py  album_db.py  artist.py  artist_db.py  base.py  common.py  config_db.py  database.py  history.py  play_db.py  ranking.py  ranking_db.py  track.py  track_db.py
src/spotifystats/model/: __init__.py  album.py  artist.py  artist_ranking.py  config.py  history.py  item.py  play.py  ranking.py  track.py  track_ranking.py
src/spotifystats/models/: album.py  artist.py  artist_ranking.py  config.py  dated_document.py  named_document.py  play.py  ranking.py  spotifystats_document.py  spotifystatsdocument.py  timed_document.py  track.py  track_ranking.py
src/test/: artifacts.py  database.py  examples.py  testdb.py
src/tests/: conftest.py
test/: testdb.py
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
web/src/: api.js  app.html  hooks.server.ts
(+135 files in other folders)
