[metadata]
name = spotifystats
version = 0.0.1
license = GPL-3.0-only
author = Bernardo Jordão
author_email = bernardo.jordao@tecnico.ulisboa.pt
long_description = file: README.md

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

project_urls =
    Source = https://github.com/itsbekas/spotifystats

[options]
python_requires = >=3.10
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    spotifystats = spotifystats.core.cli.cli:cli

[flake8]
max-line-length = 88

[isort]
profile = black
known_first_party=src
default_section = THIRDPARTY